--- a/초기화를 잘하자/초기화를 잘하자.md
+++ b/초기화를 잘하자/초기화를 잘하자.md
@@ -1,4 +1,6 @@
-#초기화
+# 초기화
+
 파이썬은 초기화를 대충해도 돌아간다
 c++하던 때와 다르게 빨리 선언하고 빨리 사용하다보면
-컴파일 에러가 나는 경우를 놓치게 될때가 있다 
+컴파일 에러가 나는 경우를 놓치게 될때가 있다
+초기화를 하는 것은 언제나 중요하
